RESOLVED FIXED257154
WPT Test (css/css-text/white-space/text-wrap-balance-line-clamp-001.html) triggers assertion failure
https://bugs.webkit.org/show_bug.cgi?id=257154
Summary WPT Test (css/css-text/white-space/text-wrap-balance-line-clamp-001.html) tri...
David Choi
Reported 2023-05-22 14:32:48 PDT
After re-importing css-text/white-space folder from WPT, a new test triggers an assertion failure: imported/w3c/web-platform-tests/css/css-text/white-space/text-wrap-balance-line-clamp-001.html [ Crash ] EWS Link: https://ews-build.webkit.org/#/builders/17/builds/5865
Attachments
Patch (3.66 KB, patch)
2023-05-22 15:24 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2023-05-22 14:32:59 PDT
alan
Comment 2 2023-05-22 14:52:54 PDT
looks like this assertion needs some adjustment.
alan
Comment 3 2023-05-22 15:11:28 PDT
yeah in case of block direction overflow handling (e.g. line-clamp) the content on the line does not necessarily overflow in the inline direction -which is what this assert expects.
alan
Comment 4 2023-05-22 15:24:10 PDT
EWS
Comment 5 2023-05-25 12:03:59 PDT
Committed 264532@main (17367cc8c3e0): <https://commits.webkit.org/264532@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466454 [details].
Note You need to log in before you can comment on or make changes to this bug.