WPT Test (css/css-text/white-space/text-wrap-balance-line-clamp-001.html) triggers assertion failure https://bugs.webkit.org/show_bug.cgi?id=257154

Reviewed by Antti Koivisto.

This patch fixes an incorrect ASSERT expectation in truncateOverflowingDisplayBoxes.
In case of block direction overflow handling (e.g. line-clamp) the content on the line does not necessarily overflow in the inline direction.

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::truncateOverflowingDisplayBoxes):
(WebCore::Layout::InlineDisplayLineBuilder::trailingEllipsisVisualRectAfterTruncation):

Canonical link: https://commits.webkit.org/264532@main